<resources>
    <string name="app_name">Interneterapia</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="registration_title">Create account</string>
    <string name="next">NEXT</string>
    <string name="log_in">Log in</string>
    <string name="what_s_your_email">What\'s your email?</string>
    <string name="pick_a_password">Pick a password</string>
    <string name="what_s_your_date_of_bith">What\'s your date of bith?</string>
    <string name="what_s_your_gender">What\'s your gender?</string>
    <string name="done">done</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="gender_db_format_male">Male</string>
    <string name="female">Female</string>
    <string name="gender_db_format_female">Female</string>
    <string name="non_binary">Non-binary</string>
    <string name="gender_db_format_nonbinary">Non-binary</string>
    <string name="what_s_your_name">What\'s your name?</string>
    <string name="your_account_is_ready">Your account is ready</string>
    <string name="save">save</string>
    <array name="gender_array">
        <item>@string/male</item>
        <item>@string/female</item>
        <item>@string/non_binary</item>
    </array>
    <string name="registration_finished">Registration finished</string>
    <string name="registration_failed">Registration failed</string>
    <string name="processing">Processing...</string>
    <string name="wrong_password_or_username">Wrong password or username</string>
    <string name="login_finished">Login finished</string>
    <string name="invalid_email_address">Invalid e-mail address</string>
    <string name="that_email_address_is_already_in_use">That e-mail address is already in use</string>
    <string name="that_email_address_is_not_in_use">That e-mail address is not in use</string>
    <string name="enter_a_valid_password">Enter a valid password</string>
    <string name="enter_your_date_of_birth">Enter your date of birth</string>
    <string name="enter_your_gender">Enter your gender</string>
    <string name="that_username_is_already_in_use">That username is already in use</string>
    <string name="that_username_is_not_in_use">That username is not in use</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="title_activity_home"></string>
    <string name="nav_header_title"></string>
    <string name="nav_header_subtitle"></string>
    <string name="action_settings">Settings</string>

    <string name="menu_news">Home</string>
    <string name="menu_tennis">Tennis</string>
    <string name="menu_football">Football</string>
    <string name="menu_settings">Settings</string>
    <string name="error_loading_data">Error loading data</string>


</resources>
