<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_menu_news"
            android:checked="true"
            android:title="@string/menu_news" />
        <item
            android:id="@+id/nav_tennis"
            android:icon="@drawable/ic_menu_tennis"
            android:title="@string/menu_tennis" />
        <item
            android:id="@+id/nav_football"
            android:icon="@drawable/ic_menu_football"
            android:title="@string/menu_football" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings" />
    </group>

</menu>
