<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDarker"
    tools:context=".Registration2Activity">

    <TextView
        android:id="@+id/registrationEndTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/registration_title"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subtitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/what_s_your_date_of_bith"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/birthdate"
        app:layout_constraintTop_toBottomOf="@+id/registrationEndTitle" />

    <TextView
        android:id="@+id/birthdate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/myedittext"
        android:onClick="birthdateTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtitle1" />

    <TextView
        android:id="@+id/subtitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/what_s_your_gender"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/birthdate"
        app:layout_constraintTop_toBottomOf="@+id/birthdate" />

    <TextView
        android:id="@+id/gender"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/myedittext"
        android:onClick="genderTextView"
        app:layout_constraintEnd_toEndOf="@+id/birthdate"
        app:layout_constraintStart_toStartOf="@+id/birthdate"
        app:layout_constraintTop_toBottomOf="@+id/subtitle2" />

    <Button
        android:id="@+id/save"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="128dp"
        android:background="@drawable/mybutton"
        android:onClick="doneButton"
        android:text="@string/done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>